--- a/Application/remote_acquire_utility/Makefile
+++ b/Application/remote_acquire_utility/Makefile
@@ -10,7 +10,8 @@ FPGA=fpga.bit
 # Versioning system
 BUILD_NUMBER ?= 0
 REVISION ?= devbuild
-VER:=$(shell cat info/info.json | grep version | sed -e 's/.*:\ *\"//' | sed -e 's/-.*//')
+VER ?= 1
+#VER:=$(shell cat info/info.json | grep version | sed -e 's/.*:\ *\"//' | sed -e 's/-.*//')
 
 INSTALL_DIR ?= ../
 
