-Added ipaddr.js library for dealing with ip address input -Many changes to the source code facilitating getting and setting of config parameters. -Incremental changes to index.html in support of the app

--- a/Application/remote_acquire_utility/Makefile
+++ b/Application/remote_acquire_utility/Makefile
@@ -30,7 +30,7 @@ $(CONTROLLER):
 zip: $(CONTROLLER)
 	-$(RM) target -rf
 	mkdir -p target/$(APP)
-	cp -r $(CONTROLLER) $(FPGA) $(KERNEL_MODULE) info index.html Makefile target/$(APP)
+	cp -r $(CONTROLLER) $(FPGA) $(KERNEL_MODULE) info assets index.html Makefile target/$(APP)
 	$(MAKE) -C src clean
 	cp -r src target/$(APP)
 	rm `find target/ -iname .svn` -rf
