Added the skeleton of start/stop functionality to the web interface, and also the contoller. The controller does not actually start/stop acquisition yet though. Also made the main source compile sit fPIC, so the command-line objects could be linked into the shared object.

--- a/Application/remote_acquire_utility/src/Makefile
+++ b/Application/remote_acquire_utility/src/Makefile
@@ -3,12 +3,15 @@ RM=rm
 
 OBJECTS=main.o
 
-INCLUDE=
+EXT_SRC_DIR=../../../src
+EXT_OBJS=$(EXT_SRC_DIR)/options.o $(EXT_SRC_DIR)/scope.o $(EXT_SRC_DIR)/transfer.o
+EXT_INC=-I$(EXT_SRC_DIR)
+
+INCLUDE=$(EXT_INC)
 
 #CFLAGS=$(CFLAGS) -Wall -Werror -g
 CFLAGS+= -Wall -Werror -g -fPIC $(INCLUDE)
 LDFLAGS=-shared
-
 
 OUT_DIR=../
 C_OUT_NAME=$(OUT_DIR)controller.so
@@ -16,8 +19,11 @@ C_OUT_NAME=$(OUT_DIR)controller.so
 all: make_c_app
 clean: clean_c_app
 
-make_c_app: $(OBJECTS)
-	$(CC) -o $(C_OUT_NAME) $(OBJECTS) $(CFLAGS) $(LDFLAGS)
+$(EXT_OBJS):
+	$(MAKE) -C $(EXT_SRC_DIR)
+
+make_c_app: $(EXT_OBJS) $(OBJECTS)
+	$(CC) -o $(C_OUT_NAME) $(OBJECTS) $(EXT_OBJS) $(CFLAGS) $(LDFLAGS)
 
 clean_c_app:
 	$(RM) -f $(C_OUT_NAME) $(OBJECTS)
