web app fixes and cleanup
renamed bitstream and included an empty fpga.bit to remain compatible with
future changes to application startup. we use a special loading procedure, so
we better not get mixed up with the generic one.

removed pipe functions and corresponding options, because our memory seems to
not be eligible for splicing.

fixes pthread usage and resource handling in web app worker.

please let's use tabs for block indentation only, and spaces for multi-line
alignment. it makes differing tab-widths unobtrusive.

--- a/Application/remote_acquire_utility/Makefile
+++ b/Application/remote_acquire_utility/Makefile
@@ -6,6 +6,7 @@
 
 APP=$(notdir $(CURDIR:%/=%))
 FPGA=fpga.bit
+FPGA_X=ddrdump.bin
 KERNEL_MODULE=rpad.ko
 
 # Versioning system
@@ -30,7 +31,7 @@ $(CONTROLLER):
 zip: $(CONTROLLER)
 	-$(RM) target -rf
 	mkdir -p target/$(APP)
-	cp -r $(CONTROLLER) $(FPGA) $(KERNEL_MODULE) info assets index.html Makefile target/$(APP)
+	cp -r $(CONTROLLER) $(FPGA) $(FPGA_X) $(KERNEL_MODULE) info assets index.html Makefile target/$(APP)
 	$(MAKE) -C src clean
 	cp -r src target/$(APP)
 	rm `find target/ -iname .svn` -rf
